--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
     "axios": "^1.3.4",
+    "moment": "^2.29.4",
     "swiper": "^9.1.0",
     "vue": "^3.2.45",
+    "vue-cookie": "^1.1.4",
     "vue-meta": "^2.4.0",
-    "vue-play": "^3.2.1",
+    "vue-play": "^0.1.2",
     "vue-router": "^4.1.6",
     "vue-youtube-embed": "^2.2.2",
     "vue3-google-map": "^0.15.0"
@@ -23,6 +25,8 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
