--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
+    "@vueup/vue-quill": "^1.0.0-beta.11",
     "axios": "^1.3.4",
     "moment": "^2.29.4",
-    "swiper": "^9.1.0",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-image-uploader": "^1.2.4",
+    "swiper": "^9.3.2",
+    "tsparticles": "^2.9.3",
     "vue": "^3.2.45",
+    "vue-carousel": "^0.18.0",
+    "vue-carousel-3d": "^1.0.1",
     "vue-cookie": "^1.1.4",
     "vue-meta": "^2.4.0",
     "vue-play": "^0.1.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^4.1.6",
+    "vue-slick-carousel": "^1.0.6",
     "vue-youtube-embed": "^2.2.2",
-    "vue3-google-map": "^0.15.0"
+    "vue3-google-map": "^0.15.0",
+    "vue3-particles": "^2.9.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
