--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "node sitemap.js"
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
@@ -15,13 +16,19 @@
     "moment": "^2.29.4",
     "quill-blot-formatter": "^1.0.5",
     "quill-image-uploader": "^1.2.4",
+    "sitemap": "^7.1.1",
+    "sitemaps": "^2.0.5",
     "swiper": "^9.3.2",
     "tsparticles": "^2.9.3",
     "vue": "^3.2.45",
+    "vue-analytics": "^5.22.1",
     "vue-carousel": "^0.18.0",
     "vue-carousel-3d": "^1.0.1",
+    "vue-cli-plugin-sitemap-google": "^2.3.3",
     "vue-cookie": "^1.1.4",
-    "vue-meta": "^2.4.0",
+    "vue-gtag": "^2.0.1",
+    "vue-head": "^2.2.0",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-play": "^0.1.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^4.1.6",
